--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/patci/server-Butler/issues"
   },
-  "homepage": "https://github.com/patci/server-Butler#readme"
+  "homepage": "https://github.com/patci/server-Butler#readme",
+  "devDependencies": {
+    "chai": "^3.4.0",
+    "gulp-jshint": "^1.12.0",
+    "gulp-mocha": "^2.1.3",
+    "mocha": "^2.3.3"
+  }
 }
