--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An HTTP server helper",
   "main": "index.js",
   "scripts": {
-    "test": "gulp mocha"
+    "test": "./node_modules/mocha/bin/mocha test"
   },
   "repository": {
     "type": "git",
